--- a/DigitalSolutionReactWebErp/appsettings.json
+++ b/DigitalSolutionReactWebErp/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conexion": "Server=tcp:database-solutiondigital.database.windows.net,1433;Initial Catalog=ERP_Solution;Persist Security Info=False;User ID=DigitalSolutions;Password=ERP2022!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=60;",
+    "
+  }
 }
