--- a/DigitalSolutionReactWebErp/DigitalSolutionReactWebErp.csproj
+++ b/DigitalSolutionReactWebErp/DigitalSolutionReactWebErp.csproj
@@ -30,6 +30,11 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\src\componentes\ERP\Menu\" />
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
