--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "bootstrap": "^5.2.2",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reactstrap": "^9.1.1"
   }
 }
